docs/api/qiskit/0.41/algorithms.md
---
title: algorithms
description: API reference for qiskit.algorithms
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.algorithms
---

<span id="module-qiskit.algorithms" />

<span id="qiskit-algorithms" />

# Algorithms

<span id="module-qiskit.algorithms" />

`qiskit.algorithms¶`

It contains a collection of quantum algorithms, for use with quantum computers, to carry out research and investigate how to solve problems in different domains on near-term quantum devices with short depth circuits.

Algorithms configuration includes the use of [`optimizers`](qiskit.algorithms.optimizers#module-qiskit.algorithms.optimizers "qiskit.algorithms.optimizers") which were designed to be swappable sub-parts of an algorithm. Any component and may be exchanged for a different implementation of the same component type in order to potentially alter the behavior and outcome of the algorithm.

Quantum algorithms are run via a `QuantumInstance` which must be set with the desired backend where the algorithm’s circuits will be executed and be configured with a number of compile and runtime parameters controlling circuit compilation and execution. It ultimately uses [Terra](https://www.qiskit.org/terra) for the actual compilation and execution of the quantum circuits created by the algorithm and its components.

## Algorithms

<span id="module-qiskit.algorithms" />

`¶`

It contains a variety of quantum algorithms and these have been grouped by logical function such as minimum eigensolvers and amplitude amplifiers.

### Amplitude Amplifiers[¶](#amplitude-amplifiers "Permalink to this headline")

|                                                                                                           |                                                                                            |
| --------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------ |
| [`AmplificationProblem`](qiskit.algorithms.AmplificationProblem "qiskit.algorithms.AmplificationProblem") | The amplification problem is the input to amplitude amplification algorithms, like Grover. |
| [`AmplitudeAmplifier`](qiskit.algorithms.AmplitudeAmplifier "qiskit.algorithms.AmplitudeAmplifier")       | The interface for amplification algorithms.                                                |
| [`Grover`](qiskit.algorithms.Grover "qiskit.algorithms.Grover")                                           | Grover's Search algorithm.                                                                 |
| [`GroverResult`](qiskit.algorithms.GroverResult "qiskit.algorithms.GroverResult")                         | Grover Result.                                                                             |

<span id="id1" />

### Amplitude Estimators[¶](#amplitude-estimators "Permalink to this headline")

|                                                                                                                                                                             |                                                                        |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------- |
| [`AmplitudeEstimator`](qiskit.algorithms.AmplitudeEstimator "qiskit.algorithms.AmplitudeEstimator")                                                                         | The Amplitude Estimation interface.                                    |
| [`AmplitudeEstimatorResult`](qiskit.algorithms.AmplitudeEstimatorResult "qiskit.algorithms.AmplitudeEstimatorResult")                                                       | The results object for amplitude estimation algorithms.                |
| [`AmplitudeEstimation`](qiskit.algorithms.AmplitudeEstimation "qiskit.algorithms.AmplitudeEstimation")                                                                      | The Quantum Phase Estimation-based Amplitude Estimation algorithm.     |
| [`AmplitudeEstimationResult`](qiskit.algorithms.AmplitudeEstimationResult "qiskit.algorithms.AmplitudeEstimationResult")                                                    | The `AmplitudeEstimation` result object.                               |
| [`EstimationProblem`](qiskit.algorithms.EstimationProblem "qiskit.algorithms.EstimationProblem")                                                                            | The estimation problem is the input to amplitude estimation algorithm. |
| [`FasterAmplitudeEstimation`](qiskit.algorithms.FasterAmplitudeEstimation "qiskit.algorithms.FasterAmplitudeEstimation")                                                    | The Faster Amplitude Estimation algorithm.                             |
| [`FasterAmplitudeEstimationResult`](qiskit.algorithms.FasterAmplitudeEstimationResult "qiskit.algorithms.FasterAmplitudeEstimationResult")                                  | The result object for the Faster Amplitude Estimation algorithm.       |
| [`IterativeAmplitudeEstimation`](qiskit.algorithms.IterativeAmplitudeEstimation "qiskit.algorithms.IterativeAmplitudeEstimation")                                           | The Iterative Amplitude Estimation algorithm.                          |
| [`IterativeAmplitudeEstimationResult`](qiskit.algorithms.IterativeAmplitudeEstimationResult "qiskit.algorithms.IterativeAmplitudeEstimationResult")                         | The `IterativeAmplitudeEstimation` result object.                      |
| [`MaximumLikelihoodAmplitudeEstimation`](qiskit.algorithms.MaximumLikelihoodAmplitudeEstimation "qiskit.algorithms.MaximumLikelihoodAmplitudeEstimation")                   | The Maximum Likelihood Amplitude Estimation algorithm.                 |
| [`MaximumLikelihoodAmplitudeEstimationResult`](qiskit.algorithms.MaximumLikelihoodAmplitudeEstimationResult "qiskit.algorithms.MaximumLikelihoodAmplitudeEstimationResult") | The `MaximumLikelihoodAmplitudeEstimation` result object.              |

### Eigensolvers[¶](#eigensolvers "Permalink to this headline")

Algorithms to find eigenvalues of an operator. For chemistry these can be used to find excited states of a molecule, and `qiskit-nature` has some algorithms that leverage chemistry specific knowledge to do this in that application domain.

#### Primitive-based Eigensolvers[¶](#primitive-based-eigensolvers "Permalink to this headline")

These algorithms are based on the Qiskit Primitives, a new execution paradigm that replaces the use of [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance") in algorithms. To ensure continued support and development, we recommend using the primitive-based Eigensolvers in place of the legacy [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance")-based ones.

|                                                                                                                         |                                                       |
| ----------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------- |
| [`eigensolvers`](qiskit.algorithms.eigensolvers#module-qiskit.algorithms.eigensolvers "qiskit.algorithms.eigensolvers") | Eigensolvers Package (qiskit.algorithms.eigensolvers) |

#### Legacy Eigensolvers[¶](#legacy-eigensolvers "Permalink to this headline")

These algorithms, still based on the [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance"), are superseded by the primitive-based versions in the section above but are still supported for now.

|                                                                                                  |                                                               |
| ------------------------------------------------------------------------------------------------ | ------------------------------------------------------------- |
| [`Eigensolver`](qiskit.algorithms.Eigensolver "qiskit.algorithms.Eigensolver")                   | Pending deprecation: Eigensolver Interface.                   |
| [`EigensolverResult`](qiskit.algorithms.EigensolverResult "qiskit.algorithms.EigensolverResult") | Pending deprecation: Eigensolver Result.                      |
| [`NumPyEigensolver`](qiskit.algorithms.NumPyEigensolver "qiskit.algorithms.NumPyEigensolver")    | Pending deprecation: NumPy Eigensolver algorithm.             |
| [`VQD`](qiskit.algorithms.VQD "qiskit.algorithms.VQD")                                           | Pending deprecation: Variational Quantum Deflation algorithm. |
| [`VQDResult`](qiskit.algorithms.VQDResult "qiskit.algorithms.VQDResult")                         | Pending deprecation: VQD Result.                              |

### Time Evolvers[¶](#time-evolvers "Permalink to this headline")

Algorithms to evolve quantum states in time. Both real and imaginary time evolution is possible with algorithms that support them. For machine learning, Quantum Imaginary Time Evolution might be used to train Quantum Boltzmann Machine Neural Networks for example.

#### Primitive-based Time Evolvers[¶](#primitive-based-time-evolvers "Permalink to this headline")

These algorithms are based on the Qiskit Primitives, a new execution paradigm that replaces the use of [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance") in algorithms. To ensure continued support and development, we recommend using the primitive-based Time Evolvers in place of the legacy [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance")-based ones.

|                                                                                                              |                                                               |
| ------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------- |
| [`RealTimeEvolver`](qiskit.algorithms.RealTimeEvolver "qiskit.algorithms.RealTimeEvolver")                   | Interface for Quantum Real Time Evolution.                    |
| [`ImaginaryTimeEvolver`](qiskit.algorithms.ImaginaryTimeEvolver "qiskit.algorithms.ImaginaryTimeEvolver")    | Interface for Quantum Imaginary Time Evolution.               |
| [`TimeEvolutionResult`](qiskit.algorithms.TimeEvolutionResult "qiskit.algorithms.TimeEvolutionResult")       | Class for holding time evolution result.                      |
| [`TimeEvolutionProblem`](qiskit.algorithms.TimeEvolutionProblem "qiskit.algorithms.TimeEvolutionProblem")    | Time evolution problem class.                                 |
| [`PVQD`](qiskit.algorithms.PVQD "qiskit.algorithms.PVQD")                                                    | The projected Variational Quantum Dynamics (p-VQD) Algorithm. |
| [`PVQDResult`](qiskit.algorithms.PVQDResult "qiskit.algorithms.PVQDResult")                                  | The result object for the p-VQD algorithm.                    |
| [`SciPyImaginaryEvolver`](qiskit.algorithms.SciPyImaginaryEvolver "qiskit.algorithms.SciPyImaginaryEvolver") | Classical Evolver for imaginary time evolution.               |
| [`SciPyRealEvolver`](qiskit.algorithms.SciPyRealEvolver "qiskit.algorithms.SciPyRealEvolver")                | Classical Evolver for real time evolution.                    |
| [`VarQITE`](qiskit.algorithms.VarQITE "qiskit.algorithms.VarQITE")                                           | Variational Quantum Imaginary Time Evolution algorithm.       |
| [`VarQRTE`](qiskit.algorithms.VarQRTE "qiskit.algorithms.VarQRTE")                                           | Variational Quantum Real Time Evolution algorithm.            |

#### Legacy Time Evolvers[¶](#legacy-time-evolvers "Permalink to this headline")

These algorithms, still based on the [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance"), are superseded by the primitive-based versions in the section above but are still supported for now.

|                                                                                               |                                                                        |
| --------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------- |
| [`RealEvolver`](qiskit.algorithms.RealEvolver "qiskit.algorithms.RealEvolver")                | Pending deprecation: Interface for Quantum Real Time Evolution.        |
| [`ImaginaryEvolver`](qiskit.algorithms.ImaginaryEvolver "qiskit.algorithms.ImaginaryEvolver") | Pending deprecation: Interface for Quantum Imaginary Time Evolution.   |
| [`TrotterQRTE`](qiskit.algorithms.TrotterQRTE "qiskit.algorithms.TrotterQRTE")                | Pending deprecation: Quantum Real Time Evolution using Trotterization. |
| [`EvolutionResult`](qiskit.algorithms.EvolutionResult "qiskit.algorithms.EvolutionResult")    | Pending deprecation: Class for holding evolution result.               |
| [`EvolutionProblem`](qiskit.algorithms.EvolutionProblem "qiskit.algorithms.EvolutionProblem") | Pending deprecation: Evolution problem class.                          |

#### Variational Quantum Time Evolution[¶](#variational-quantum-time-evolution "Permalink to this headline")

Classes used by variational quantum time evolution algorithms - [`VarQITE`](qiskit.algorithms.VarQITE "qiskit.algorithms.VarQITE") and [`VarQRTE`](qiskit.algorithms.VarQRTE "qiskit.algorithms.VarQRTE").

|                                                                                                                                                                             |                                                                                    |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------- |
| [`time_evolvers.variational`](qiskit.algorithms.time_evolvers.variational#module-qiskit.algorithms.time_evolvers.variational "qiskit.algorithms.time_evolvers.variational") | Variational Quantum Time Evolutions (qiskit.algorithms.time\_evolvers.variational) |

#### Trotterization-based Quantum Real Time Evolution[¶](#trotterization-based-quantum-real-time-evolution "Permalink to this headline")

Package for primitives-enabled Trotterization-based quantum time evolution algorithm - `TrotterQRTE`.

|                                                                                                                                                                                         |                                                                                   |
| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------- |
| [`time_evolvers.trotterization`](qiskit.algorithms.time_evolvers.trotterization#module-qiskit.algorithms.time_evolvers.trotterization "qiskit.algorithms.time_evolvers.trotterization") | This package contains Trotterization-based Quantum Real Time Evolution algorithm. |

### Factorizers[¶](#factorizers "Permalink to this headline")

Algorithms to find factors of a number.

|                                                                             |                                            |
| --------------------------------------------------------------------------- | ------------------------------------------ |
| [`Shor`](qiskit.algorithms.Shor "qiskit.algorithms.Shor")                   | The deprecated Shor's factoring algorithm. |
| [`ShorResult`](qiskit.algorithms.ShorResult "qiskit.algorithms.ShorResult") | The deprecated Shor Result.                |

### Gradients[¶](#gradients "Permalink to this headline")

Algorithms to calculate the gradient of a quantum circuit.

|                                                                                                             |                                         |
| ----------------------------------------------------------------------------------------------------------- | --------------------------------------- |
| [`gradients`](qiskit.algorithms.gradients#module-qiskit.algorithms.gradients "qiskit.algorithms.gradients") | Gradients (qiskit.algorithms.gradients) |

### Linear Solvers[¶](#linear-solvers "Permalink to this headline")

Algorithms to solve linear systems of equations.

|                                                                                                                                 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| ------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`linear_solvers`](qiskit.algorithms.linear_solvers#module-qiskit.algorithms.linear_solvers "qiskit.algorithms.linear_solvers") | The deprecated Linear solvers (qiskit.algorithms.linear\_solvers) It contains classical and quantum algorithms to solve systems of linear equations such as HHL. Although the quantum algorithm accepts a general Hermitian matrix as input, Qiskit's default Hamiltonian evolution is exponential in such cases and therefore the quantum linear solver will not achieve an exponential speedup. Furthermore, the quantum algorithm can find a solution exponentially faster in the size of the system than their classical counterparts (i.e. logarithmic complexity instead of polynomial), meaning that reading the full solution vector would kill such speedup (since this would take linear time in the size of the system). Therefore, to achieve an exponential speedup we can only compute functions from the solution vector (the so called observables) to learn information about the solution. Known efficient implementations of Hamiltonian evolutions or observables are contained in the following subfolders: |

### Minimum Eigensolvers[¶](#minimum-eigensolvers "Permalink to this headline")

Algorithms that can find the minimum eigenvalue of an operator.

#### Primitive-based Minimum Eigensolvers[¶](#primitive-based-minimum-eigensolvers "Permalink to this headline")

These algorithms are based on the Qiskit Primitives, a new execution paradigm that replaces the use of [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance") in algorithms. To ensure continued support and development, we recommend using the primitive-based Minimum Eigensolvers in place of the legacy [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance")-based ones.

|                                                                                                                                                         |                                                                        |
| ------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------- |
| [`minimum_eigensolvers`](qiskit.algorithms.minimum_eigensolvers#module-qiskit.algorithms.minimum_eigensolvers "qiskit.algorithms.minimum_eigensolvers") | Minimum Eigensolvers Package (qiskit.algorithms.minimum\_eigensolvers) |

#### Legacy Minimum Eigensolvers[¶](#legacy-minimum-eigensolvers "Permalink to this headline")

These algorithms, still based on the [`QuantumInstance`](qiskit.utils.QuantumInstance "qiskit.utils.QuantumInstance"), are superseded by the primitive-based versions in the section above but are still supported for now.

|                                                                                                                       |                                                                  |
| --------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------- |
| [`MinimumEigensolver`](qiskit.algorithms.MinimumEigensolver "qiskit.algorithms.MinimumEigensolver")                   | Pending deprecation: Minimum Eigensolver Interface.              |
| [`MinimumEigensolverResult`](qiskit.algorithms.MinimumEigensolverResult "qiskit.algorithms.MinimumEigensolverResult") | Pending deprecation: Minimum Eigensolver Result.                 |
| [`NumPyMinimumEigensolver`](qiskit.algorithms.NumPyMinimumEigensolver "qiskit.algorithms.NumPyMinimumEigensolver")    | Pending deprecation: Numpy Minimum Eigensolver algorithm.        |
| [`QAOA`](qiskit.algorithms.QAOA "qiskit.algorithms.QAOA")                                                             | Pending deprecation: Quantum Approximate Optimization Algorithm. |
| [`VQE`](qiskit.algorithms.VQE "qiskit.algorithms.VQE")                                                                | Pending deprecation: Variational Quantum Eigensolver algorithm.  |

### Optimizers[¶](#optimizers "Permalink to this headline")

Classical optimizers for use by quantum variational algorithms.

|                                                                                                                 |                                                                                                                                                                                                                 |
| --------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`optimizers`](qiskit.algorithms.optimizers#module-qiskit.algorithms.optimizers "qiskit.algorithms.optimizers") | Optimizers (qiskit.algorithms.optimizers) It contains a variety of classical optimizers for use by quantum variational algorithms, such as VQE. Logically, these optimizers can be divided into two categories: |

### Phase Estimators[¶](#phase-estimators "Permalink to this headline")

Algorithms that estimate the phases of eigenstates of a unitary.

|                                                                                                                                               |                                                                                                                                                                 |
| --------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`HamiltonianPhaseEstimation`](qiskit.algorithms.HamiltonianPhaseEstimation "qiskit.algorithms.HamiltonianPhaseEstimation")                   | Run the Quantum Phase Estimation algorithm to find the eigenvalues of a Hermitian operator.                                                                     |
| [`HamiltonianPhaseEstimationResult`](qiskit.algorithms.HamiltonianPhaseEstimationResult "qiskit.algorithms.HamiltonianPhaseEstimationResult") | Store and manipulate results from running HamiltonianPhaseEstimation.                                                                                           |
| [`PhaseEstimationScale`](qiskit.algorithms.PhaseEstimationScale "qiskit.algorithms.PhaseEstimationScale")                                     | Set and use a bound on eigenvalues of a Hermitian operator in order to ensure phases are in the desired range and to convert measured phases into eigenvectors. |
| [`PhaseEstimation`](qiskit.algorithms.PhaseEstimation "qiskit.algorithms.PhaseEstimation")                                                    | Run the Quantum Phase Estimation (QPE) algorithm.                                                                                                               |
| [`PhaseEstimationResult`](qiskit.algorithms.PhaseEstimationResult "qiskit.algorithms.PhaseEstimationResult")                                  | Store and manipulate results from running PhaseEstimation.                                                                                                      |
| [`IterativePhaseEstimation`](qiskit.algorithms.IterativePhaseEstimation "qiskit.algorithms.IterativePhaseEstimation")                         | Run the Iterative quantum phase estimation (QPE) algorithm.                                                                                                     |

### State Fidelities[¶](#state-fidelities "Permalink to this headline")

Algorithms that compute the fidelity of pairs of quantum states.

|                                                                                                                                         |                                                                 |
| --------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- |
| [`state_fidelities`](qiskit.algorithms.state_fidelities#module-qiskit.algorithms.state_fidelities "qiskit.algorithms.state_fidelities") | State Fidelity Interfaces (qiskit.algorithms.state\_fidelities) |

### Exceptions[¶](#exceptions "Permalink to this headline")

|                                                                                                    |                                |
| -------------------------------------------------------------------------------------------------- | ------------------------------ |
| [`AlgorithmError`](qiskit.algorithms.AlgorithmError "qiskit.algorithms.AlgorithmError")(\*message) | For Algorithm specific errors. |

### Utility methods[¶](#utility-methods "Permalink to this headline")

Utility methods used by algorithms.

|                                                                                                                                   |                                                                                                                                           |
| --------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------- |
| [`eval_observables`](qiskit.algorithms.eval_observables "qiskit.algorithms.eval_observables")(quantum\_instance, ...\[, ...])     | Pending deprecation: Accepts a list or a dictionary of operators and calculates their expectation values - means and standard deviations. |
| [`estimate_observables`](qiskit.algorithms.estimate_observables "qiskit.algorithms.estimate_observables")(estimator, ...\[, ...]) | Accepts a sequence of operators and calculates their expectation values - means and metadata.                                             |

### Utility classes[¶](#utility-classes "Permalink to this headline")

Utility classes used by algorithms (mainly for type-hinting purposes).

|                                                                                                                 |                                                     |
| --------------------------------------------------------------------------------------------------------------- | --------------------------------------------------- |
| [`AlgorithmJob`](qiskit.algorithms.AlgorithmJob "qiskit.algorithms.AlgorithmJob")(function, \*args, \*\*kwargs) | This empty class is introduced for typing purposes. |

